# eagles

./: Cargo.toml  README.md  db.sqlite  dfx.json  diesel.toml  package-lock.json  package.json
migrations/2024-10-16-024430_create_departments/: up.sql
src/: schema.rs
src/eagles_backend/: Cargo.toml
src/eagles_backend/src/: controllers.rs  db.rs  main.rs  models.rs
src/eagles_frontend/: README.md  about.html  contact.html  departments.html  doctors.html  index.html  package.json
