[package]
name = "eagles_backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eagles_backend"      # Name of your binary
path = "src/main.rs"          # Path to your main file

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
diesel = { version = "2.0", features = ["r2d2", "sqlite"] }
dotenv = "0.15"
r2d2 = "0.8"
